--- a/ZippyPix/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ZippyPix/en.lproj/MainStoryboard_iPhone.storyboard
@@ -26,13 +26,128 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Photo Controller-->
+        <scene sceneID="yJG-6m-oKQ">
+            <objects>
+                <viewController storyboardIdentifier="photoController" wantsFullScreenLayout="YES" id="yNz-7u-KDr" customClass="FCPhotoController" sceneMemberID="viewController">
+                    <view key="view" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="h75-ts-IZG">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="YWr-Je-A24"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" translatesAutoresizingMaskIntoConstraints="NO" id="rEb-uX-zj9">
+                                <items>
+                                    <barButtonItem systemItem="camera" id="ecH-gY-Lt7">
+                                        <connections>
+                                            <action selector="showCamera:" destination="yNz-7u-KDr" id="kDT-Eo-ePS"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="O6g-mt-meS"/>
+                                    <barButtonItem enabled="NO" width="141" style="plain" id="dYD-na-Duo">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="0xg-Z7-v4Y">
+                                            <rect key="frame" x="-153" y="7" width="141" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <state key="normal" title="Button" image="walgreens.png">
+                                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <state key="highlighted">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="printToWalgreens:" destination="yNz-7u-KDr" eventType="touchUpInside" id="rNm-pT-wd3"/>
+                                            </connections>
+                                        </button>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <textView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDz-s4-6ef">
+                                <constraints>
+                                    <constraint firstAttribute="width" id="1it-OJ-7ZM"/>
+                                    <constraint firstAttribute="height" id="Klt-sc-1o4"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <activityIndicatorView hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="dfU-BI-Eo1"/>
+                            <progressView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Yt0-6g-8uq"/>
+                            <webView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZkQ-bv-z42">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="8Ed-Sb-BvV"/>
+                                </constraints>
+                            </webView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="dfU-BI-Eo1" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="221" id="62f-QI-kzj"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="leading" secondItem="FDz-s4-6ef" secondAttribute="leading" type="default" id="9bZ-87-ASG"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="trailing" secondItem="YWr-Je-A24" secondAttribute="trailing" type="default" id="9iO-9c-iKR"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="trailing" secondItem="Yt0-6g-8uq" secondAttribute="trailing" type="default" id="Dgn-W7-rhE"/>
+                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="leading" secondItem="YWr-Je-A24" secondAttribute="leading" type="default" id="IJj-4a-H2K"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="bottom" secondItem="ZkQ-bv-z42" secondAttribute="bottom" type="default" id="Od1-2p-Wwm"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="top" secondItem="YWr-Je-A24" secondAttribute="top" type="default" id="QbT-wB-qa0"/>
+                            <constraint firstAttribute="bottom" secondItem="rEb-uX-zj9" secondAttribute="bottom" constant="72" id="Qml-hP-801"/>
+                            <constraint firstItem="FDz-s4-6ef" firstAttribute="trailing" secondItem="ZkQ-bv-z42" secondAttribute="trailing" type="default" id="RUv-qL-tf6"/>
+                            <constraint firstItem="rEb-uX-zj9" firstAttribute="leading" secondItem="Yt0-6g-8uq" secondAttribute="leading" type="default" id="VgR-Vw-ahb"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="240" id="WCN-zu-LGj"/>
+                            <constraint firstItem="FDz-s4-6ef" firstAttribute="centerX" secondItem="h75-ts-IZG" secondAttribute="centerX" type="default" id="Z3A-bs-faO"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="leading" secondItem="YWr-Je-A24" secondAttribute="leading" type="default" id="hZT-rN-PbX"/>
+                            <constraint firstItem="FDz-s4-6ef" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="139" id="kpC-pt-uW2"/>
+                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="trailing" secondItem="rEb-uX-zj9" secondAttribute="trailing" type="default" id="mIc-3o-Etg"/>
+                            <constraint firstAttribute="bottom" secondItem="Yt0-6g-8uq" secondAttribute="bottom" constant="125" id="nlM-XG-nGI"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="centerX" secondItem="dfU-BI-Eo1" secondAttribute="centerX" type="default" id="sPu-3Y-L27"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="aWebView" destination="ZkQ-bv-z42" id="q20-aR-kr2"/>
+                        <outlet property="activityIndicatorView" destination="dfU-BI-Eo1" id="JRL-cE-L4p"/>
+                        <outlet property="cameraItem" destination="ecH-gY-Lt7" id="GCD-rE-oUQ"/>
+                        <outlet property="photoImageView" destination="YWr-Je-A24" id="eIY-68-yQF"/>
+                        <outlet property="printWarningTextView" destination="FDz-s4-6ef" id="K14-z9-e9R"/>
+                        <outlet property="progressView" destination="Yt0-6g-8uq" id="vTs-ib-V0t"/>
+                        <outlet property="tapRecognizer" destination="Tgr-SJ-Eeh" id="Hxe-8z-OpP"/>
+                        <outlet property="toolbar" destination="rEb-uX-zj9" id="z8s-eb-jIl"/>
+                        <outlet property="walgreensItem" destination="dYD-na-Duo" id="eEH-CE-RdA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7OW-Ci-J5R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Tgr-SJ-Eeh">
+                    <connections>
+                        <action selector="toggleControls:" destination="yNz-7u-KDr" id="WlI-de-rln"/>
+                        <outlet property="delegate" destination="YWr-Je-A24" id="U6q-Mi-oDL"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="-51" y="769"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Default-568h@2x.png" width="640" height="1136"/>
+        <image name="walgreens.png" width="141" height="30"/>
     </resources>
     <classes>
         <class className="FCCameraController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FCCameraController.h"/>
+        </class>
+        <class className="FCPhotoController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FCPhotoController.h"/>
+            <relationships>
+                <relationship kind="action" name="printToWalgreens:"/>
+                <relationship kind="action" name="showCamera:"/>
+                <relationship kind="action" name="toggleControls:"/>
+                <relationship kind="outlet" name="aWebView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="activityIndicatorView" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="cameraItem" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="photoImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="printWarningTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="tapRecognizer" candidateClass="UITapGestureRecognizer"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="walgreensItem" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
