realigned photo view using auto layout

--- a/ZippyPix/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ZippyPix/en.lproj/MainStoryboard_iPhone.storyboard
@@ -45,7 +45,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="O6g-mt-meS"/>
                                     <barButtonItem enabled="NO" width="141" style="plain" id="dYD-na-Duo">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="0xg-Z7-v4Y">
-                                            <rect key="frame" x="-153" y="7" width="141" height="30"/>
+                                            <rect key="frame" x="167" y="7" width="141" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <state key="normal" title="Button" image="walgreens.png">
@@ -64,8 +64,7 @@
                             </toolbar>
                             <textView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDz-s4-6ef">
                                 <constraints>
-                                    <constraint firstAttribute="width" id="1it-OJ-7ZM"/>
-                                    <constraint firstAttribute="height" id="Klt-sc-1o4"/>
+                                    <constraint firstAttribute="height" constant="150" id="O3h-rE-Yig"/>
                                 </constraints>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
@@ -77,28 +76,29 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="height" id="8Ed-Sb-BvV"/>
+                                    <constraint firstAttribute="width" constant="327" id="3fr-mb-OCI"/>
                                 </constraints>
                             </webView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="dfU-BI-Eo1" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="221" id="62f-QI-kzj"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="leading" secondItem="FDz-s4-6ef" secondAttribute="leading" type="default" id="9bZ-87-ASG"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="trailing" secondItem="YWr-Je-A24" secondAttribute="trailing" type="default" id="9iO-9c-iKR"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="trailing" secondItem="Yt0-6g-8uq" secondAttribute="trailing" type="default" id="Dgn-W7-rhE"/>
-                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="leading" secondItem="YWr-Je-A24" secondAttribute="leading" type="default" id="IJj-4a-H2K"/>
-                            <constraint firstItem="YWr-Je-A24" firstAttribute="bottom" secondItem="ZkQ-bv-z42" secondAttribute="bottom" type="default" id="Od1-2p-Wwm"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="top" secondItem="YWr-Je-A24" secondAttribute="top" type="default" id="QbT-wB-qa0"/>
-                            <constraint firstAttribute="bottom" secondItem="rEb-uX-zj9" secondAttribute="bottom" constant="72" id="Qml-hP-801"/>
-                            <constraint firstItem="FDz-s4-6ef" firstAttribute="trailing" secondItem="ZkQ-bv-z42" secondAttribute="trailing" type="default" id="RUv-qL-tf6"/>
-                            <constraint firstItem="rEb-uX-zj9" firstAttribute="leading" secondItem="Yt0-6g-8uq" secondAttribute="leading" type="default" id="VgR-Vw-ahb"/>
-                            <constraint firstItem="YWr-Je-A24" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="240" id="WCN-zu-LGj"/>
-                            <constraint firstItem="FDz-s4-6ef" firstAttribute="centerX" secondItem="h75-ts-IZG" secondAttribute="centerX" type="default" id="Z3A-bs-faO"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="leading" secondItem="YWr-Je-A24" secondAttribute="leading" type="default" id="hZT-rN-PbX"/>
-                            <constraint firstItem="FDz-s4-6ef" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="139" id="kpC-pt-uW2"/>
-                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="trailing" secondItem="rEb-uX-zj9" secondAttribute="trailing" type="default" id="mIc-3o-Etg"/>
-                            <constraint firstAttribute="bottom" secondItem="Yt0-6g-8uq" secondAttribute="bottom" constant="125" id="nlM-XG-nGI"/>
-                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="centerX" secondItem="dfU-BI-Eo1" secondAttribute="centerX" type="default" id="sPu-3Y-L27"/>
+                            <constraint firstItem="FDz-s4-6ef" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="20" symbolic="YES" type="default" id="4zp-Xc-QmA"/>
+                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="centerX" secondItem="dfU-BI-Eo1" secondAttribute="centerX" type="default" id="879-uZ-hLz"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" type="default" id="9DF-7c-r2A"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="leading" secondItem="h75-ts-IZG" secondAttribute="leading" type="default" id="DRA-MA-JL0"/>
+                            <constraint firstItem="FDz-s4-6ef" firstAttribute="leading" secondItem="h75-ts-IZG" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Emy-Tm-fw4"/>
+                            <constraint firstItem="rEb-uX-zj9" firstAttribute="bottom" secondItem="h75-ts-IZG" secondAttribute="bottom" type="default" id="LhZ-76-aCY"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="trailing" secondItem="h75-ts-IZG" secondAttribute="trailing" type="default" id="MXG-BX-Afg"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" type="default" id="O8i-cZ-QS2"/>
+                            <constraint firstAttribute="trailing" secondItem="FDz-s4-6ef" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="UTc-Ze-kZe"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="bottom" secondItem="h75-ts-IZG" secondAttribute="bottom" type="default" id="VvG-sM-Fye"/>
+                            <constraint firstItem="rEb-uX-zj9" firstAttribute="trailing" secondItem="h75-ts-IZG" secondAttribute="trailing" type="default" id="YPm-of-0m5"/>
+                            <constraint firstItem="Yt0-6g-8uq" firstAttribute="leading" secondItem="h75-ts-IZG" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="aUN-Ko-Hht"/>
+                            <constraint firstAttribute="bottom" secondItem="Yt0-6g-8uq" secondAttribute="bottom" constant="59" id="cSS-2K-w6P"/>
+                            <constraint firstItem="ZkQ-bv-z42" firstAttribute="trailing" secondItem="h75-ts-IZG" secondAttribute="trailing" type="default" id="cdk-oh-e2E"/>
+                            <constraint firstItem="rEb-uX-zj9" firstAttribute="leading" secondItem="h75-ts-IZG" secondAttribute="leading" type="default" id="f6l-CM-Yc4"/>
+                            <constraint firstItem="YWr-Je-A24" firstAttribute="bottom" secondItem="h75-ts-IZG" secondAttribute="bottom" type="default" id="pFg-L4-ADp"/>
+                            <constraint firstAttribute="trailing" secondItem="Yt0-6g-8uq" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="qzz-YP-oqG"/>
+                            <constraint firstItem="dfU-BI-Eo1" firstAttribute="top" secondItem="h75-ts-IZG" secondAttribute="top" constant="255" id="tMC-yM-xOb"/>
                         </constraints>
                     </view>
                     <connections>
