--- a/ZippyPix/en.lproj/MainStoryboard_iPad.storyboard
+++ b/ZippyPix/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
@@ -17,7 +17,113 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Photo Controller-->
+        <scene sceneID="E8K-Nb-ngQ">
+            <objects>
+                <viewController storyboardIdentifier="photoController" wantsFullScreenLayout="YES" id="2Qw-ht-5H5" customClass="FCPhotoController" sceneMemberID="viewController">
+                    <view key="view" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="8L4-OA-MF2">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFit" id="2Mv-Xp-Xss">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" id="qyO-ac-b7v">
+                                <rect key="frame" x="0.0" y="960" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="e99-gh-FSs">
+                                        <connections>
+                                            <action selector="showCamera:" destination="2Qw-ht-5H5" id="tJr-JD-jf6"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="OPh-gi-Eud"/>
+                                    <barButtonItem enabled="NO" width="141" style="plain" id="i3K-VD-KH5">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8l6-CQ-U3U">
+                                            <rect key="frame" x="615" y="7" width="141" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <state key="normal" title="Button" image="walgreens.png">
+                                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <state key="highlighted">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="printToWalgreens:" destination="2Qw-ht-5H5" eventType="touchUpInside" id="RlE-2W-WmH"/>
+                                            </connections>
+                                        </button>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <activityIndicatorView hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" id="iKJ-Sv-nFY">
+                                <rect key="frame" x="365" y="484" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <progressView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" progress="0.5" id="2gs-rc-UWU">
+                                <rect key="frame" x="221" y="928" width="325" height="9"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </progressView>
+                            <webView hidden="YES" contentMode="scaleToFill" id="WPC-Ga-0Fb">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                            </webView>
+                        </subviews>
+                    </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <connections>
+                        <outlet property="aWebView" destination="WPC-Ga-0Fb" id="Y5j-1X-hKE"/>
+                        <outlet property="activityIndicatorView" destination="iKJ-Sv-nFY" id="mwr-al-Vs8"/>
+                        <outlet property="cameraItem" destination="e99-gh-FSs" id="XVP-e1-RHi"/>
+                        <outlet property="photoImageView" destination="2Mv-Xp-Xss" id="4yC-R6-BNw"/>
+                        <outlet property="progressView" destination="2gs-rc-UWU" id="vFc-xz-nG2"/>
+                        <outlet property="tapRecognizer" destination="hNZ-2q-lza" id="5va-46-Lt3"/>
+                        <outlet property="toolbar" destination="qyO-ac-b7v" id="rSV-HG-CRZ"/>
+                        <outlet property="walgreensItem" destination="i3K-VD-KH5" id="sZY-P9-MbZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yaQ-7o-jEX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="hNZ-2q-lza">
+                    <connections>
+                        <action selector="toggleControls:" destination="2Qw-ht-5H5" id="Q4B-38-XnN"/>
+                        <outlet property="delegate" destination="2Mv-Xp-Xss" id="VgO-HF-t1H"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="796" y="-127"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="walgreens.png" width="141" height="30"/>
+    </resources>
+    <classes>
+        <class className="FCCameraController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FCCameraController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="backgroundImage" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="FCPhotoController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FCPhotoController.h"/>
+            <relationships>
+                <relationship kind="action" name="printToWalgreens:"/>
+                <relationship kind="action" name="showCamera:"/>
+                <relationship kind="action" name="toggleControls:"/>
+                <relationship kind="outlet" name="aWebView" candidateClass="UIWebView"/>
+                <relationship kind="outlet" name="activityIndicatorView" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="cameraItem" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="photoImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="tapRecognizer" candidateClass="UITapGestureRecognizer"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="walgreensItem" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
